--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -162,12 +162,12 @@
                                     </div>
                                     <div class="media-body media-right">
                                         <form class="form-inline" role="form">
-                                          <div class="form-group" id="date">
+                                          <div class="form-group has-feedback" id="date">
                                             <input type="txt" class="form-control" id="date" placeholder="Date">
                                             <span class="glyphicon glyphicon-calendar"></span>
                                           </div>
                                           <div class="form-group ">
-                                            <input type="txt" class="form-control" id="time" placeholder="Time">
+                                            <input type="txt" class="form-control" id="time" placeholder="Time glyphicon-time">
                                             <span class="glyphicon glyphicon-time"></span>
                                           </div>
                                         </form>
@@ -286,6 +286,15 @@
                         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
+                    <div class="btn-group" id="carouselButtons">
+                        <button class="btn btn-danger btn-xs" id="carousel-pause">
+                            <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
+                        </button>
+                        <button class="btn btn-danger btn-xs" id="carousel-play">
+                            <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+                        </button>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -430,6 +439,7 @@
             </div>
         </div> 
     </footer>
+    
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -440,6 +450,17 @@
         $(document).ready(function(){
         $('[data-toggle="tooltip"]').tooltip();
          });
+    </script>
+    <script>
+        $(document).ready(function(){
+            $("#mycarousel").carousel( { interval: 2000 } );
+                          $("#carousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
+            });
+                        $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
+        });
     </script>
 
 
